# shape_classification_cnn_cpp

./: .gitignore  CMakeLists.txt  main.cpp
..dev/: kaggle_geometric_shapes_mathematics.url  log.txt  todo.txt
.qtcreator/: CMakeLists.txt.user.a3e24a5  CMakeLists.txt.user.c521d95
src/: Activation.cpp  Activation.h  BatchTensor.cpp  BatchTensor.h  ChartWindow.cpp  ChartWindow.h  ChartWindow.ui  ConsoleInterface.cpp  ConsoleInterface.h  Conv.cpp  Conv.h  Interface.h  Layer.cpp  Layer.h  Operation.cpp  Operation.h  Pool.cpp  Pool.h  Tensor1D.cpp  Tensor1D.h  Tensor2D.cpp  Tensor2D.h  Tensor3D.cpp  Tensor3D.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tensor.cpp  tensor.h
src/Extended/: Vector.cpp  Vector.h
src/Helper/: declarations_q.h  definitions.h
src/QHelper/: QConsoleInterface.cpp  QConsoleInterface.h  QTensorAdapter.cpp  QTensorAdapter.h
src/helper/: declarations.h  macro.h  test.h
src/testing/: TensorTest.cpp  TensorTest.h  UnitTest.cpp  UnitTest.h
